--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="translucent_gray">#44666666</color>
+    <color name="translucent_gray">#DD444444</color>
+    <color name="gray">#FF666666</color>
     <color name="progress_color">#FF3355EE</color>
 </resources>
