--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="spinnerItems">
+        <item>Unspecified</item>
         <item>1 min</item>
         <item>2 min</item>
         <item>3 min</item>
