--- a/app/src/main/res/layout/context_menu_item.xml
+++ b/app/src/main/res/layout/context_menu_item.xml
@@ -14,6 +14,8 @@
         android:layout_gravity="center_vertical|center_horizontal"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
