--- a/app/src/main/res/layout/timer_activity_main.xml
+++ b/app/src/main/res/layout/timer_activity_main.xml
@@ -16,7 +16,7 @@
 
 
         <TextView
-            android:id="@+id/text_slideshow"
+            android:id="@+id/time_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -57,36 +57,65 @@
             app:layout_constraintEnd_toEndOf="parent"
             />
 
-
-        <FrameLayout
+        <LinearLayout
+            android:id="@+id/header_info"
             android:layout_width="match_parent"
-            android:layout_height="80dp">
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleHorizontal"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:layout_gravity="center_vertical"
-                android:scaleY="3"
-                android:max="1000"
-                android:min="0"
-                android:progress="@{viewModel.progress}"
-                android:progressDrawable="@drawable/custom_progress_bar"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.034" />
+                android:layout_height="20dp">
+                <TextView
+                    android:layout_marginStart="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:textSize="12dp"
+                    android:text="@{viewModel.name}"
+                    />
+                <TextView
+                    android:layout_marginEnd="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textSize="12dp"
+                    android:text="@{viewModel.cutoffs}"
+                    />
 
-            <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/lottie"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                app:lottie_fileName="girl-cycling-in-autumn.json"
-                app:lottie_autoPlay="true"
-                app:lottie_loop="true"
-                />
-        </FrameLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp">
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="4dp"
+                    android:layout_gravity="center_vertical"
+                    android:scaleY="3"
+                    android:max="1000"
+                    android:min="0"
+                    android:progress="@{viewModel.progress}"
+                    android:progressDrawable="@drawable/custom_progress_bar"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.034" />
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/lottie"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    app:lottie_fileName="girl-cycling-in-autumn.json"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"
+                    />
+            </FrameLayout>
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
