--- a/app/src/main/res/layout/timer_activity_main.xml
+++ b/app/src/main/res/layout/timer_activity_main.xml
@@ -63,6 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:visibility="invisible"
             app:layout_constraintTop_toTopOf="parent"
             >
             <androidx.constraintlayout.widget.ConstraintLayout
