--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,14 +8,14 @@
     </string-array>
 
     <string-array name="buffer_times">
-        <item>30 seconds, but 15 seconds up tp 2 minutes</item>
+        <item>30 seconds, but 15 seconds up to 2 minutes</item>
         <item>15 seconds</item>
         <item>30 seconds</item>
         <item>40 seconds</item>
     </string-array>
 
     <string-array name="green_card_policies">
-        <item>show on time but judge qualification to apply buffer time</item>
+        <item>show on time, but judge qualification to apply buffer time</item>
         <item>show on time </item>
         <item>show earlier by buffer time</item>
     </string-array>
