--- a/app/src/main/res/layout/timer_activity_main.xml
+++ b/app/src/main/res/layout/timer_activity_main.xml
@@ -64,25 +64,34 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:visibility="invisible"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toTopOf="parent"
             >
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="20dp">
+                android:layout_height="24dp">
                 <TextView
-                    android:layout_marginStart="20dp"
+                    android:layout_marginStart="24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:textSize="12dp"
+                    android:textSize="16dp"
+                    android:textAlignment="center"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
+                    android:background="@drawable/rounded_token"
                     android:text="@{viewModel.name}"
                     />
                 <TextView
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginEnd="24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:textAlignment="center"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:textSize="12dp"
+                    android:textSize="16dp"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
+                    android:background="@drawable/rounded_token"
                     android:text="@{viewModel.cutoffs}"
                     />
 
