--- a/app/src/main/res/layout/name_input.xml
+++ b/app/src/main/res/layout/name_input.xml
@@ -11,7 +11,7 @@
         android:layout_width="257dp"
         android:layout_height="53dp"
         android:layout_marginTop="20dp"
-        android:hint="Write speaker name"
+        android:hint="Write speaker\'s name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
