--- a/app/src/main/res/layout/context_menu_item.xml
+++ b/app/src/main/res/layout/context_menu_item.xml
@@ -16,6 +16,7 @@
         android:paddingEnd="10dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
+        android:textColor = "@color/white"
         />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
