--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/nav_timer"
-        android:name="com.ykseon.toastmaster.ui.timer.TimerFragment"
+        android:name="com.ykseon.toastmaster.ui.timer.TimerCardsFragment"
         android:label="@string/menu_timer"
         tools:layout="@layout/fragment_timer" />
 
