--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,9 +15,9 @@
     </string-array>
 
     <string-array name="green_card_policies">
-        <item>show on time, but judge qualification to apply buffer time</item>
-        <item>show on time </item>
-        <item>show earlier by buffer time</item>
+        <item>show at Given Time, but qualify with Buffer Time</item>
+        <item>show and qualify at Given Time</item>
+        <item>show and qualify with Buffer Time</item>
     </string-array>
 
     <string-array name="sort_type">
@@ -54,11 +54,21 @@
         <item>18 min</item>
         <item>19 min</item>
         <item>20 min</item>
+        <item>21 min</item>
+        <item>22 min</item>
+        <item>23 min</item>
+        <item>24 min</item>
         <item>25 min</item>
+        <item>26 min</item>
+        <item>27 min</item>
+        <item>28 min</item>
+        <item>29 min</item>
         <item>30 min</item>
+        <item>35 min</item>
         <item>40 min</item>
+        <item>45 min</item>
         <item>50 min</item>
+        <item>55 min</item>
         <item>60 min</item>
-        <item>30 min</item>
     </string-array>
 </resources>
